# switch_co

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  brol  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.cpp
main/actuators/: bool_actuator.cpp  bool_actuator.hpp  pwm_actuator.cpp  pwm_actuator.hpp
main/app/: device.cpp  device.hpp  gpio_handler.cpp  gpio_handler.hpp
main/app/ginco/: device.cpp  device.hpp  ginco_thread.cpp  ginco_thread.hpp
main/app/gpio/: gpio_thread.cpp  gpio_thread.hpp
main/defines/: events.h  ginco_message.cpp  ginco_types.cpp  ginco_types.hpp
main/drivers/: can.cpp  can.hpp  config.cpp  config.hpp  gpio.cpp  gpio.hpp  i2c.cpp  i2c.hpp  upgrade.cpp  upgrade.h  upgrade.hpp
main/inc/: can.h  can_driver.h  config.h  device.h  gpio.h  input.h  output.h  switch.h  upgrade.h
main/modules/: PCF8575.cpp  PCF8575.hpp  device.cpp  input.cpp  input.hpp  output.cpp  output.hpp  switch.cpp
main/sensors/: event_sensor.cpp  event_sensor.hpp
main/supervisor/: supervisor.cpp
main/threading/: concurrent.hpp  message.hpp  standard_task.cpp  standard_task.hpp  stats.hpp  supervised_task.hpp
main/threads/: can_thread.cpp  can_thread.hpp  ginco_thread.cpp  ginco_thread.hpp  gpio_thread.cpp  gpio_thread.hpp  supervisor.cpp  supervisor.hpp  tasklist.hpp
