file(GLOB private_lib
    modules/*.cpp
    drivers/*.cpp
    supervisor/*.cpp
    app/ginco/*.cpp
    app/gpio/*.cpp
    defines/*.cpp
    actuators/*.cpp
    sensors/*.cpp
    ../common/defines/*.cpp
    ../common/threading/*.cpp
    ../common/drivers/*.cpp
    ../common/utils/*.cpp
)

idf_component_register(
    SRCS
        "main.cpp"
        ${private_lib}
    INCLUDE_DIRS
        "."
        "defines"
        "supervisor"
        "app/ginco"
        "app/gpio"
        "drivers"
        "modules"
        "actuators"
        "sensors"
        "../common/defines"
        "../common/threading"
        "../common/drivers"
        "../common/utils"
)
